Support location_id in product open API endpoints (closes #2989)
