# grocy.openapi.json
@@ -2255,6 +2255,10 @@
 									"allow_subproduct_substitution": {
 										"type": "boolean",
 										"description": "`true` when any in stock sub product should be used when the given product is a parent product and currently not in stock"
+									},
+									"location_id": {
+										"type": "integer",
+										"description": "A valid location id (if supplied, only stock at the given location is considered, if ommitted, stock of any location is considered)"
 									}
 								},
 								"example": {
@@ -2599,7 +2603,7 @@
 									},
 									"allow_subproduct_substitution": {
 										"type": "boolean",
-										"description": "`rue` when any in stock sub product should be used when the given product is a parent product and currently not in stock"
+										"description": "`true` when any in stock sub product should be used when the given product is a parent product and currently not in stock"
 									}
 								},
 								"example": {
@@ -2822,7 +2826,11 @@
 									},
 									"allow_subproduct_substitution": {
 										"type": "boolean",
-										"description": "`rue` when any in stock sub product should be used when the given product is a parent product and currently not in stock"
+										"description": "`true` when any in stock sub product should be used when the given product is a parent product and currently not in stock"
+									},
+									"location_id": {
+										"type": "integer",
+										"description": "A valid location id (if supplied, only stock at the given location is considered, if ommitted, stock of any location is considered)"
 									}
 								},
 								"example": {
